log
Thu May 12 11:13:09 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c730e93
Thu May 12 11:18:40 HSP 2022: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
97f0b6a
Thu May 12 11:22:23 HSP 2022: 
 sudoku.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
2cfdd16
Thu May 12 11:29:00 HSP 2022: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  0|5
total_score: 0/70
8e0c641
Thu May 12 11:30:44 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
f405bea
Thu May 12 11:31:25 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
22c7bfc
Thu May 12 11:32:27 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
98bb6d0
Thu May 12 11:37:36 HSP 2022: 
 sudoku.c | 37 ++++++++++---------------------------
 1 file changed, 10 insertions(+), 27 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:54:29: error: expected ')' before ';' token
       if (n->sudo[i][j] != 0;)
                             ^
sudoku.c:64:10: error: unused variable 'vectorNum' [-Werror=unused-variable]
     int *vectorNum = (int*)calloc(10, sizeof(int));
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
545a6fa
Thu May 12 11:38:12 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:54:29: error: expected ')' before ';' token
       if (n->sudo[i][j] != 0;)
                             ^
sudoku.c:56:9: error: expected expression before '[' token
         [vectorNumn->sudo[i][j]]++;
         ^
sudoku.c:56:10: error: 'vectorNumn' undeclared (first use in this function)
         [vectorNumn->sudo[i][j]]++;
          ^~~~~~~~~~
sudoku.c:56:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
105ba1e
Thu May 12 11:38:37 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:54:29: error: expected ')' before ';' token
       if (n->sudo[i][j] != 0;)
                             ^
Compilation failed
6e382e4
Thu May 12 11:39:05 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
be85d3f
Thu May 12 11:41:24 HSP 2022: 
 sudoku.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
27474c4
